# AndroidGlideAvifDecoder

./: .gitmodules  LICENSE  Readme.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  image_cell.xml
app/src/main/res/values/: strings.xml
benchmark/: build.gradle
benchmark/src/androidTest/: AndroidManifest.xml
benchmark/src/main/: AndroidManifest.xml
glideavif/: build.gradle
glideavif/dav1d_builder/: docker-compose.yml
glideavif/dav1d_builder/docker/: Dockerfile  dav1d_cross.txt
glideavif/libdav1d_builder/: Readme.md  docker-compose.yml
glideavif/libdav1d_builder/docker/: Dockerfile  dav1d_cross.txt
glideavif/libyuv_builder/: Readme.md  docker-compose.yml
glideavif/libyuv_builder/docker/: Dockerfile
glideavif/src/main/: AndroidManifest.xml
glideavif/src/main/cpp/: CMakeLists.txt  avif_decoder.cpp  avif_wrapper.cpp  avif_wrapper.hpp  common.cpp  common.hpp  my_bitmap.cpp  my_bitmap.hpp  native-lib.cpp
glideavif/src/main/cpp/lib/arm64-v8a/: libavif.so.0.1.4
glideavif/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
